# rbyte

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlfmt.yaml  LICENSE  LICENSE.txt  README.md  droid.ipynb  duckdb_example.py  flake.nix  hatch_build.py  justfile  pyproject.toml  setup.py
.github/workflows/: build.yaml  ci.yaml  publish.yaml  release.yaml
config/_templates/: benchmark_dataloader.yaml  build_table.yaml  dataset.yaml  profile_memory.yaml  visualize.yaml
config/_templates/dataloader/: default.yaml  torch.yaml  torchdata.yaml  unbatched.yaml
config/_templates/dataset/: carla.yaml  carla_garage.yaml  droid.yaml  hdf5.yaml  kion.yaml  load.yaml  mcap.yaml  mimicgen.yaml  nuscenes.yaml  nuscenes_mcap.yaml  nuscenes_rrd.yaml  profile_memory.yaml  yaak.yaml  yaak_frames_wpts.yaml  zod.yaml
config/_templates/dataset/nuscenes/: mcap.yaml  rrd.yaml
config/_templates/dataset/yaak/: train-tiny.yaml
config/_templates/frame_reader/: directory.yaml  mcap.yaml
config/_templates/frame_reader/video/: vali.yaml
config/_templates/logger/: console.yaml
config/_templates/logger/rerun/: carla.yaml  carla_garage.yaml  droid.yaml  hdf5.yaml  kion.yaml  mimicgen.yaml  nuscenes.yaml  nuscenes_mcap.yaml  nuscenes_rrd.yaml  yaak.yaml  zod.yaml
config/_templates/logger/rerun/nuscenes/: mcap.yaml  rrd.yaml
config/_templates/table_builder/: carla.yaml  hdf5.yaml  mcap.yaml  rrd.yaml  yaak.yaml
config/_templates/table_writer/: console.yaml  parquet.yaml
config/logger/rerun/: kion.yaml
docs/: rerun.md
examples/: .gitattributes  nuscenes.ipynb  nuscenes_mcap.ipynb  nuscenes_rrd.ipynb  yaak.ipynb
examples/config_templates/: build_table.yaml  read_frames.yaml  table.yaml  visualize.yaml
examples/config_templates/dataset/: carla.yaml  hdf5.yaml  mcap.yaml  mcap_protobuf.yaml  yaak.yaml
examples/config_templates/frame_reader/: hdf5.yaml  mcap.yaml  video.yaml
examples/config_templates/frame_reader/video/: ffmpeg.yaml  vali.yaml
examples/config_templates/logger/: rerun_carla.yaml  rerun_yaak.yaml
examples/config_templates/logger/rerun/: carla.yaml  hdf5.yaml  mcap.yaml  mcap_protobuf.yaml  yaak.yaml
examples/config_templates/table_builder/: carla.yaml  hdf5.yaml  mcap.yaml  mcap_protobuf.yaml  mcap_ros2.yaml  yaak.yaml
examples/config_templates/table_writer/: csv.yaml
src/rbyte/: __init__.py  batch.py  config.py  dataloader.py  dataset.py  types.py
src/rbyte/batch/: __init__.py  batch.py
src/rbyte/config/: __init__.py  base.py
src/rbyte/dataset/: __init__.py  config.py  dataset.py
src/rbyte/io/: __init__.py  base.py  tree.py
src/rbyte/io/_duckdb/: __init__.py  dataframe_builder.py  dataframe_query.py  udf.py
src/rbyte/io/_duckdb/udfs/: __init__.py  base.py  wgs84_to_utm.py
src/rbyte/io/_json/: __init__.py  dataframe_builder.py  table_reader.py
src/rbyte/io/_mcap/: __init__.py  dataframe_builder.py  table_reader.py  tensor_source.py
src/rbyte/io/_mcap/decoders/: __init__.py  json_decoder_factory.py  protobuf_decoder_factory.py
src/rbyte/io/_numpy/: __init__.py  buffer.py  tensor_source.py
src/rbyte/io/carla/waypoints/: __init__.py  normalizer.py  preprocessor.py
src/rbyte/io/carla_garage/waypoints/: __init__.py  normalizer.py  preprocessor.py
src/rbyte/io/dataframe/: __init__.py  aligner.py  columns_concater.py  concater.py  coordinates_transform.py  filter.py  fps_resampler.py  gnss_waypoints_sampler.py  groupby.py  indexer.py  joiner.py  joiner_asof.py  sample_builder.py  samples.py  sql.py  waypoints_merger.py
src/rbyte/io/frame/: __init__.py  base.py
src/rbyte/io/frame/directory/: __init__.py  reader.py
src/rbyte/io/frame/hdf5/: __init__.py  reader.py
src/rbyte/io/frame/jpeg/: __init__.py  reader.py
src/rbyte/io/frame/mcap/: __init__.py  reader.py
src/rbyte/io/frame/rrd/: __init__.py  reader.py
src/rbyte/io/frame/video/: __init__.py  ffmpeg_reader.py  reader.py  vali_reader.py
src/rbyte/io/geo/: __init__.py  dataframe_builder.py  waypoints.py
src/rbyte/io/hdf5/: __init__.py  dataframe_builder.py  table_reader.py  tensor_source.py
src/rbyte/io/path/: __init__.py  dataframe_builder.py  table_reader.py  tensor_source.py
src/rbyte/io/rrd/: __init__.py  dataframe_builder.py  frame_source.py  table_reader.py
src/rbyte/io/table/: __init__.py  aligner.py  base.py  builder.py  concater.py  merger.py
src/rbyte/io/table/carla/: __init__.py  builder.py
src/rbyte/io/table/hdf5/: __init__.py  reader.py
src/rbyte/io/table/json/: __init__.py  (+1 more)
src/rbyte/io/video/: __init__.py  dataframe_builder.py  ffmpeg_source.py  hls_source.py  torchcodec_source.py  vali_source.py
src/rbyte/io/waypoints/: __init__.py  carla_preprocess.py  normalizer.py  utils.py  waypoints_merger.py  yaak_preprocess.py
src/rbyte/io/yaak/: __init__.py  dataframe_builder.py  message_iterator.py  table_reader.py
src/rbyte/sample/: __init__.py  base.py  builder.py  fixed_window.py  greedy_builder.py  rolling_window.py
src/rbyte/scripts/: benchmark_dataloader.py  build_table.py  profile_memory.py  read_frames.py  visualize.py
src/rbyte/utils/: __init__.py  _datetime.py  _pipefunc.py  dataframe.py  dataframe_cache.py  dataloader.py  functional.py  tensor.py
src/rbyte/utils/_mcap/: __init__.py
src/rbyte/utils/dataframe/: __init__.py  cache.py  misc.py
src/rbyte/utils/mcap/: __init__.py  json_decoder_factory.py
src/rbyte/viz/loggers/: __init__.py  base.py  console_logger.py  rerun_logger.py
tests/: conftest.py  test_dataframe.py  test_dataloader.py  test_dataloaders.py  test_dataset.py  test_datasets.py  test_examples.py  test_io.py  test_loggers.py
tests/data/: .gitattributes  coffee.hdf5  nuScenes-v1.0-mini-scene-0061-cut.mcap  nuscenes.rrd  table_setup_from_dishwasher_sample.hdf5
tests/data/carla_garage/: README.md
tests/data/droid/: README.md
tests/data/mimicgen/: README.md
tests/data/nuscenes/: README.md
tests/data/nuscenes/mcap/: README.md
tests/data/nuscenes/rrd/: README.md  nuscenes_dataset.rrd
tests/data/yaak/: .gitattributes  README.md
tests/data/zod/: .gitattributes  README.md
(+36 files in other folders)
