[project]
name = "rbyte"
version = "0.29.0"
description = "Multimodal PyTorch dataset library"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Evgenii Gorchakov", email = "evgenii@yaak.ai" }]
maintainers = [{ name = "Evgenii Gorchakov", email = "evgenii@yaak.ai" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cachetools>=6.1.0",
  "duckdb>=1.3.1",
  "humanize>=4.12.3",
  "hydra-core>=1.3.2",
  "more-itertools>=10.7.0",
  "numpy",
  "optree>=0.16.0",
  "pipefunc[autodoc]>=0.85.2",
  "polars[pyarrow]>=1.31.0",
  "pydantic>=2.11.7",
  "structlog>=25.4.0",
  "tensordict>=0.8.3, <0.9",
  "torch",
  "tqdm>=4.67.1",
  "xxhash>=3.5.0",
]

[project.urls]
repo = "https://github.com/yaak-ai/rbyte"

[project.scripts]
profile-memory = "rbyte.scripts.profile_memory:main"
rbyte-visualize = "rbyte.scripts.visualize:main"

[project.optional-dependencies]
build = ["hatchling>=1.27.0"]
geo = ["polars-st==0.1.2", "utm>=0.8.1", "shapely>=2.1.1"]
hdf5 = ["h5py>=3.14.0"]
jpeg = ["simplejpeg>=1.8.2"]
mcap = ["mcap>=1.3.0", "mcap-protobuf-support>=0.5.3", "protobuf"]
profile = ["memray>=1.17.2"]
protos = ["grpcio-tools==1.71.0", "protoletariat>=3.3.10"]
video = ["torchcodec>=0.4.0"]
visualize = ["rerun-sdk[notebook]==0.23.4"]
yaak = ["ptars>=0.0.5", "protobuf"]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "ipython-autoimport>=0.5.1",
  "ipython>=9.3.0",
  "lovely-tensors>=0.1.18",
  "pipefunc[plotting]",
  "pudb>=2025.1",
  "wat-inspector>=0.4.3",
]
test = [
  "pytest-lazy-fixtures>=1.1.4",
  "pytest>=8.4.1",
  "testbook>=0.4.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.basedpyright]
typeCheckingMode = "all"
enableTypeIgnoreComments = true
reportMissingTypeStubs = "none"
reportAny = "none"
reportExplicitAny = "none"
reportIgnoreCommentWithoutRule = "error"
venvPath = "."
venv = ".venv"
include = ["src/"]
ignore = ["src/**/*_pb2.py", "**/*.pyi"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
reproducible = true

[tool.hatch.build.targets.sdist]
include = ["src/rbyte"]
exclude = ["src/rbyte/io/yaak/idl-repo"]
artifacts = ["src/rbyte/io/yaak/proto/*_pb2.py*"]

[tool.hatch.build.targets.sdist.hooks.custom]
enable-by-default = true
require-runtime-features = ["protos"]

[tool.hatch.build.targets.wheel]
packages = ["src/rbyte"]
artifacts = ["src/rbyte/io/yaak/proto/*_pb2.py*"]

[tool.pytest.ini_options]
addopts = ["-ra", "-vv", "--import-mode=importlib"]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["*_pb2.py"]
output-format = "grouped"
preview = true
fix = true
unsafe-fixes = true
target-version = "py312"

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "A001",
  "A002",
  "D",
  "CPY",
  "COM812",
  "F722",
  "PD901",
  "ISC001",
  "TD",
  "TC006",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.uv.sources]
torchcodec = [
  { index = "darwin", marker = "sys_platform == 'darwin'" },
  { index = "linux", marker = "sys_platform == 'linux'" },
]
torch = [
  { index = "darwin", marker = "sys_platform == 'darwin'" },
  { index = "linux", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "darwin"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "linux"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

