[project]
name = "rbyte"
version = "0.34.5"
description = "Multimodal PyTorch dataset library"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Evgenii Gorchakov", email = "evgenii@yaak.ai" }]
maintainers = [{ name = "Evgenii Gorchakov", email = "evgenii@yaak.ai" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cachetools>=6.1.0",
  "checkedframe>=0.1.0",
  "duckdb>=1.4.2",
  "hydra-core>=1.3.2",
  "makefun>=1.16.0",
  "more-itertools>=10.8.0",
  "numpy",
  "optree>=0.18.0",
  "pipefunc[autodoc]>=0.87.0",
  "polars>=1.36.0",
  "pydantic>=2.12.5",
  "strenum>=0.4.15",
  "structlog>=25.4.0",
  "tensordict==0.10.0",
  "torch",
  "torchdata>=0.11.0",
  "tqdm>=4.67.1",
  "typing-extensions>=4.15.0",
  "xxhash>=3.6.0",
]

[project.urls]
repo = "https://github.com/yaak-ai/rbyte"

[project.scripts]
rbyte-benchmark-dataloader = "rbyte.scripts.benchmark_dataloader:main"
rbyte-visualize = "rbyte.scripts.visualize:main"

[project.optional-dependencies]
build = ["hatchling>=1.27.0"]
geo = ["polars-st==0.4.3"]
hdf5 = ["h5py>=3.14.0"]
jpeg = ["simplejpeg>=1.9.0"]
mcap = ["mcap>=1.3.0", "mcap-protobuf-support>=0.5.3", "protobuf"]
protos = ["grpcio-tools==1.71.0", "protoletariat>=3.3.10"]
video = ["torchcodec>=0.8.1"]
visualize = [
  "einops>=0.8.1",
  "rerun-sdk[notebook]>=0.27.2",
]
yaak = ["ptars==0.0.5", "protobuf"]

[dependency-groups]
dev = [
  "better-exceptions>=0.3.3",
  "graphviz-anywidget>=0.8.0",
  "ipykernel>=6.29.5",
  "ipython>=8.1.0",
  "ipython-autoimport>=0.5.1",
  "jupyterlab>=4.4.5",
  "jupyterlab-vim>=4.1.4",
  "lovely-tensors>=0.1.19",
  "patdb>=0.1.1",
  "pipefunc[plotting]",
  "wat-inspector>=0.4.3",
]
check = [
  "ruff>=0.14.10",
  "ty>=0.0.7",
]
test = [
  "dill>=0.4.0",
  "pytest>=9.0.1",
  "pytest-lazy-fixtures>=1.4.0",
  "testbook>=0.4.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
reproducible = true

[tool.hatch.build.targets.sdist]
include = ["src/rbyte"]
exclude = ["src/rbyte/io/yaak/idl-repo"]
artifacts = ["src/rbyte/io/yaak/proto/*_pb2.py*"]

[tool.hatch.build.targets.sdist.hooks.custom]
enable-by-default = true
require-runtime-features = ["protos"]

[tool.hatch.build.targets.wheel]
packages = ["src/rbyte"]
artifacts = ["src/rbyte/io/yaak/proto/*_pb2.py*"]

[tool.hatch.build.targets.wheel.hooks.custom]
enable-by-default = true
require-runtime-features = ["protos"]

[tool.pytest]
addopts = ["--import-mode=importlib", "-ra", "-vv"]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["*_pb2.py"]
output-format = "grouped"
preview = true
fix = true
unsafe-fixes = true
target-version = "py310"

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "A001",
  "A002",
  "D",
  "CPY",
  "COM812",
  "F722",
  "ISC001",
  "TD",
  "TC006",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.tombi]
schema.strict = false

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchcodec = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
